k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tu-evento-backend
  labels:
    app: tu-evento-backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: tu-evento-backend
  template:
    metadata:
      labels:
        app: tu-evento-backend
    spec:
      containers:
      - name: tu-evento-backend
        image: jhampier23/tu-evento:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
