k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tu-evento-frontend-service
  labels:
    app: tu-evento-frontend
spec:
  selector:
    app: tu-evento-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
  type: NodePort
