k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tu-evento-backend-service
  labels:
    app: tu-evento-backend
spec:
  selector:
    app: tu-evento-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
